--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- javascript -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
@@ -52,6 +56,34 @@
       }
 
 
+    /* CUSTOMIZE THE NAVBAR
+    -------------------------------------------------- */
+
+    /* Special class on .container surrounding .navbar, used for positioning it into place. */
+    .navbar-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      margin-top: 20px;
+      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+    }
+    .navbar-wrapper .navbar {
+
+    }
+
+      /* Custom container */
+    .navbar-wrapper .container {
+        margin: 0 auto;
+        max-width: 1000px;
+    }
+
+      /* Offset the responsive button for proper vertical alignment */
+    .navbar .btn-navbar {
+      margin-top: 10px;
+    }
+
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
         padding: 0;
@@ -61,25 +93,53 @@
         display: table;
         width: 100%;
       }
-      .navbar .nav li {
+      .navbar .nav > li {
         display: table-cell;
         width: 1%;
         float: none;
       }
-      .navbar .nav li a {
+      .navbar .nav > li > a {
         font-weight: bold;
         text-align: center;
         border-left: 1px solid rgba(255,255,255,.75);
         border-right: 1px solid rgba(0,0,0,.1);
       }
-      .navbar .nav li:first-child a {
+      .navbar .nav > li:first-child > a {
         border-left: 0;
         border-radius: 3px 0 0 3px;
       }
-      .navbar .nav li:last-child a {
+      .navbar .nav > li:last-child > a {
         border-right: 0;
         border-radius: 0 3px 3px 0;
       }
+
+
+
+    /* RESPONSIVE CSS
+    -------------------------------------------------- */
+
+    @media (max-width: 979px) {
+
+      .container.navbar-wrapper {
+        margin-bottom: 0;
+        width: auto;
+      }
+      .navbar-inner {
+        border-radius: 0;
+        margin: -20px 0;
+      }
+
+    }
+
+
+    @media (max-width: 767px) {
+
+      .navbar-inner {
+        margin: -20px;
+      }
+
+    }
+
 
     /* Featurettes
     ------------------------- */
@@ -132,20 +192,42 @@
 
     <div class="container">
 
-      <div class="masthead">
+    <!-- NAVBAR
+    ================================================== -->
+    <div class="navbar-wrapper">
+      <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+      <div class="container">
+
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="container">
+            <!-- Responsive Navbar Part 1: Button for triggering responsive navbar. -->
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!-- Responsive Navbar Part 2: Place contents you want collapsed within .navbar-collapse collapse. -->
+            <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="/index.html">About Me</a></li>
-                <li><a href="/research.html">Research</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/climate.html">Past climate change</a></li>
+                    <li><a href="/methane.html">Methane-oxidizing microbes</a></li>
+                    <li><a href="/metabolism.html">Ancient microbial metabolism</a></li>
+                  </ul>
+                </li>
                 <li><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
-            </div>
-          </div>
+            </div><!--/.nav-collapse -->
+          </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
-      </div>
+
+      </div> <!-- /.container -->
+    </div><!-- /.navbar-wrapper -->
+
 
       <!-- Jumbotron -->
       <div class="jumbotron">
@@ -163,7 +245,7 @@
 
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
-        <h2 class="featurette-heading">Environmental scientist by training. </h2>
+        <h2 class="featurette-heading">Environmental scientist. </h2>
         <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. </p>
         <p class="lead"> I also have four years of research experience in the environmental sciences. <a href="/research.html">Read more about my research.</a> </p>
       </div>
@@ -181,7 +263,7 @@
       <div class="featurette">
         <img class="featurette-image pull-right" src="assets/img/examples/committed.JPG">
         <h2 class="featurette-heading">Committed. </h2>
-        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. Success didn't come easily; every accomplishment followed at least one failed attempt. Long after frustration had overcome my excited anticipation of the results, I was still motivated by a desire to produce high-quality work. </p>
+        <p class="lead">I was thrilled to take ownership of each of my research projects and be responsible for their success. As is common in science, success didn't come easily; every accomplishment followed at least one failed attempt. Through the many problems and setbacks I encountered in my research, I remained motivated by my sense of responsibility. </p>
       </div>
 
       <hr class="featurette-divider">
