--- a/outreach.html
+++ b/outreach.html
@@ -186,7 +186,7 @@
             <!-- Responsive Navbar Part 2: Place contents you want collapsed within .navbar-collapse collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <l><a href="/index.html">About Me</a></li>
+                <li><a href="/index.html">About Me</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -195,7 +195,7 @@
                     <li><a href="/metabolism.html">Ancient microbial metabolism</a></li>
                   </ul>
                 </li>
-                <lii class="active"><a href="/outreach.html">Outreach</a></li>
+                <li class="active"><a href="/outreach.html">Outreach</a></li>
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div><!--/.nav-collapse -->
