--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- javascript -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
@@ -52,6 +56,14 @@
       }
 
 
+    /* CUSTOMIZE THE NAVBAR
+    -------------------------------------------------- */
+
+      /* Offset the responsive button for proper vertical alignment */
+    .navbar .btn-navbar {
+      margin-top: 10px;
+    }
+
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
         padding: 0;
@@ -61,25 +73,53 @@
         display: table;
         width: 100%;
       }
-      .navbar .nav li {
+      .navbar .nav > li {
         display: table-cell;
         width: 1%;
         float: none;
       }
-      .navbar .nav li a {
+      .navbar .nav > li > a {
         font-weight: bold;
         text-align: center;
         border-left: 1px solid rgba(255,255,255,.75);
         border-right: 1px solid rgba(0,0,0,.1);
       }
-      .navbar .nav li:first-child a {
+      .navbar .nav > li:first-child > a {
         border-left: 0;
         border-radius: 3px 0 0 3px;
       }
-      .navbar .nav li:last-child a {
+      .navbar .nav > li:last-child > a {
         border-right: 0;
         border-radius: 0 3px 3px 0;
       }
+
+
+
+    /* RESPONSIVE CSS
+    -------------------------------------------------- */
+
+    @media (max-width: 979px) {
+
+      .container.navbar-wrapper {
+        margin-bottom: 0;
+        width: auto;
+      }
+      .navbar-inner {
+        border-radius: 0;
+        margin: -20px 0;
+      }
+
+    }
+
+
+    @media (max-width: 767px) {
+
+      .navbar-inner {
+        margin: -20px;
+      }
+
+    }
+
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -100,20 +140,35 @@
 
     <div class="container">
 
-      <div class="masthead">
+    <!-- NAVBAR
+    ================================================== -->
+
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="container">
+            <!-- Responsive Navbar Part 1: Button for triggering responsive navbar. -->
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!-- Responsive Navbar Part 2: Place contents you want collapsed within .navbar-collapse collapse. -->
+            <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="/index.html">About Me</a></li>
-                <li><a href="/research.html">Research</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/climate.html">Past climate change</a></li>
+                    <li><a href="/methane.html">Methane-oxidizing microbes</a></li>
+                    <li><a href="/metabolism.html">Ancient microbial metabolism</a></li>
+                  </ul>
+                </li>
                 <li><a href="/outreach.html">Outreach</a></li>
                 <li class="active"><a href="/contact.html">Contact</a></li>
               </ul>
-            </div>
-          </div>
+            </div><!--/.nav-collapse -->
+          </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
-      </div>
 
       <!-- Jumbotron -->
       <div class="jumbotron">
