--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,11 @@
         margin: 60px 0;
       }
 
+      br {
+      content: " ";
+      display: block;
+      margin: 100px;
+      }
 
       /* Main marketing message and sign up button */
       .jumbotron {
@@ -174,6 +179,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Contact info</h1>
+	<br/>
         <p class="lead">761 Allen Court, Palo Alto, CA 94303</p>
         <p class="lead">(650) 416-4224</p>
         <p class="lead">renatacummins@gmail.com</p>
